# EasyNeuralNetCpp

./: ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  Data.cpp  Data.h  Model.cpp  Model.h  Neuron.cpp  Neuron.h  main.cpp
Layers/: HiddenLayer.cpp  HiddenLayer.h  InputLayer.cpp  InputLayer.h  SuperLayer.cpp  SuperLayer.h
